--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,8 @@
  *
  * This generated file contains a sample Java project to get you started.
  * For more details take a look at the Java Quickstart chapter in the Gradle
- * user guide available at https://docs.gradle.org/3.0/userguide/tutorial_java_projects.html
+ * user guide available at
+ * https://docs.gradle.org/3.0/userguide/tutorial_java_projects.html
  */
 
 // Apply the java plugin to add support for Java
@@ -45,18 +46,10 @@ repositories {
 
 // In this section you declare the dependencies for your production and test code
 dependencies {
-    // The production code uses the commons-collections at compile time.
-    // compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
     compile 'commons-collections:commons-collections:3.2'
-    // The production code uses the SLF4J logging API at compile time.
     compile 'org.slf4j:slf4j-api:1.7.14'
-
-    // Declare the dependency for your favourite test framework you want to use in your tests.
-    // TestNG is also supported by the Gradle Test task. Just change the
-    // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
-    // 'test.useTestNG()' to your build script.
+    testCompile 'org.testng:testng:6+'
     testCompile 'junit:junit:4.+'
-    // testCompile 'junit:junit:4.12'
 }
 
 test {
@@ -78,7 +71,7 @@ task myTask {
 }
 
 task myAnotherTask << {
-    String message = "another way to create my own task"
+    String message = "Another way to create my own task"
     println "Hello, " + message.toUpperCase()
 }
 
